@@ -4,6 +4,7 @@
 	* Added extra logging for character set conversion
 	* Updated Channel Editor and Scan Dialog
 	* Fixed hang when cancelling the scan dialog
+	* Fixed issue with selecting new channel after Channel Editor/Scan Dialog
 
 2009-06-14  Michael Lamothe <michael.lamothe@gmail.com>
 
